<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Claes Holmerson 2013, 2015. The program is licensed under GNU GPL v3. See LICENSE.txt for details.
  -->

<resources>

    <string name="filtering">Lista
</string>
    <string name="sort_order">Sortering
</string>
    <string name="app_name">Fågelappen Online
</string>
    <string-array name="drawer_menu_list">
        <item>Fåglar</item>
        <item>Hjälp</item>
        <item>Om Fågelappen Online</item>
    </string-array>
<string name="action_settings">Settings
</string>
    <string name="alphabetic_swedish">Svenskt namn
</string>
    <string name="alphabetic_english">Engelskt namn
</string>
    <string name="phylogenic_sort">Fylogenetisk
</string>
    <string name="population_sort">Häckande antal
</string>
    <string name="alphabetic_latin">Vetenskapligt namn
</string>
    <string name="breeding">Häckfågel (H)
</string>
    <string name="breeding_unclear">Oregelbundet häckande (h)
</string>
    <string name="migrant">Flyttfågel (F)
</string>
    <string name="regular_visitor">Tillfällig gäst (T)
</string>
    <string name="rare">Raritet (R)
</string>
    <string name="unseen">Övriga Västpalearktis (V)
</string>
    <string name="unclassified">Övriga världen (Ö)
</string>
    <string name="non_spontaneous">Icke-spontan (I)
</string>
    <string name="audio_repeat">Loopa läte
</string>
    <string name="audio_autonext">Auto nästa
</string>
    <string name="audio_options">Inställningar
</string>
    <string name="species">Art</string>
    <string name="family">Familj</string>
    <string name="order">Ordning</string>
    <string name="least">Minsta</string>
    <string name="best">Bästa</string>
    <string name="most">Högsta</string>
    <string name="monthly_stats">Månadsbaserad</string>
    <string name="weekly_stats">Veckobaserad</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="wikipedia_options">Språk</string>
    <string name="wikipedia_swedish">Wikipedia (svenska)</string>
    <string name="wikipedia_english">Wikipedia (engelska)</string>
    <string name="search_title">Sök</string>
    <string name="search_hint">Artnamn</string>
    <string name="crash_toast_text">Fågelappen kraschade! Vill du mejla kraschrapport?</string>
    <string name="map_region_sweden">Hela Sverige</string>
    <string name="map_region_current_position">Aktuell region</string>
    <string name="gbif_occurrence_options">Position</string>
    <string name="map_region_western_palearctis">Västra Palearktis</string>
    <string name="map_show_gbif_occurrences">Observationer</string>
    <string name="map_show_distribution">Utbredning</string>
    <string name="map_region_world">Världen</string>
    <string name="artportalen_photos">Artportalen foton</string>
    <string name="artportalen_sightings">Artportalen obsar</string>
    <string name="web_external">Externa webbsajter</string>
    <string name="artfakta">Artfakta</string>
    <string name="google_photos">Google Photos</string>
    <string name="youtube">Youtube</string>
    <string name="iucn_range_map">Utbredning (IUCN)</string>
    <string name="tab_map">Karta</string>
    <string name="tab_sounds">Läten</string>
    <string name="tab_photos">Foton</string>
    <string name="tab_facts">Statistik</string>
    <string name="tab_wikipedia">Wikipedia</string>
    <string name="county_list">Län</string>

    <string name="downloadDatabaseDescription">Fågeldatabasen behöver laddas ned. Den är cirka 20 megabyte stor.</string>
    <string name="downloadNoWifiDescription">Du är inte uppkopplad med wifi. Nedladdningen kan kosta pengar.</string>
    <string name="downloadNoNetworkDescription">Du har ingen nätverksförbindelse för närvarande.</string>
    <string name="downloadCancel">Avbryt</string>
    <string name="downloadContinue">Fortsätt</string>

</resources>