<!--
  ~ Copyright (c) Claes Holmerson 2013, 2015. The program is licensed under GNU GPL v3. See LICENSE.txt for details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
                android:id="@+id/map_region_sweden"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/map_region_sweden" />
    <item
        android:id="@+id/map_region_current_position"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_region_current_position" />
    <item
        android:id="@+id/map_region_western_palearctis"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_region_western_palearctis" />
    <item
        android:id="@+id/map_region_world"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_region_world" />
    <item
        android:id="@+id/map_show_gbif_occurrences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:title="@string/map_show_gbif_occurrences" />
    <item
        android:id="@+id/map_show_distribution"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:title="@string/map_show_distribution" />
</menu>