<!--
  ~ Copyright (c) Claes Holmerson 2013, 2015. The program is licensed under GNU GPL v3. See LICENSE.txt for details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/external_web_sites"
        android:icon="@drawable/ic_language_white_36dp"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/web_external">
        <menu>
            <item
                android:id="@+id/artportalen_sightings"
                android:checkable="false"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/artportalen_sightings" />
            <item
                android:id="@+id/artportalen_photos"
                android:checkable="false"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/artportalen_photos" />
            <item
                android:id="@+id/artfakta"
                android:checkable="false"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/artfakta" />
            <item
                android:id="@+id/google_photos"
                android:checkable="false"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/google_photos" />
            <item
                android:id="@+id/youtube"
                android:checkable="false"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/youtube" />
        </menu>
    </item>
</menu>