<!--
  ~ Copyright (c) Claes Holmerson 2013, 2015. The program is licensed under GNU GPL v3. See LICENSE.txt for details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/audio_options"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_white_36dp"
        android:title="@string/audio_options">
        <menu>
            <group
                android:id="@+id/audio_group"
                android:checkableBehavior="single" >
            <item
                android:id="@+id/audio_repeat"
                android:checkable="true"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/audio_repeat" />
            <item
                android:id="@+id/audio_autonext"
                android:checkable="true"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/audio_autonext" />
            </group>
        </menu>
    </item>
</menu>